@startuml

title __TRANSACTIONS's Class Diagram__\n

  package controller {
    package controller.transactions {
      interface BillController {
          {abstract} + recordPayment()
      }
    }
  }
  

  package controller {
    package controller.transactions {
      class CashController {
          + CashController()
          - getCashToWithdraw()
          + withdrawCash()
          - calculateTotalBillAmount()
          + depositCash()
      }
    }
  }
  

  package controller {
    package controller.transactions {
      class ChequeController {
          + ChequeController()
          + depositCheque()
      }
    }
  }
  

  package controller {
    package controller.transactions {
      interface DepositController {
          {abstract} + setATM()
          {abstract} + getATM()
          {abstract} + depositMoney()
          {abstract} + stockCash()
      }
    }
  }
  

  package controller {
    package controller.transactions {
      class FileBillController {
          - billFileName : String
          + FileBillController()
          + getBillFileName()
          + setBillFileName()
          + recordPayment()
      }
    }
  }
  

  package controller {
    package controller.transactions {
      class FileDepositController {
          - depositFileName : String
          + FileDepositController()
          + getATM()
          + setATM()
          + setDepositFileName()
          + getDepositFileName()
          + depositMoney()
          + stockCash()
          - getCashMapForDeposit()
          - getDepositInfo()
      }
    }
  }
  

  package controller {
    package controller.transactions {
      enum DepositType {
        CASH
        CHEQUE
      }
    }
  }
  

  package controller {
    package controller.transactions {
      class DepositInfo {
          ~ cashMap : HashMap<Cash, Integer>
          ~ amount : double
          ~ DepositInfo()
          ~ DepositInfo()
      }
    }
  }
  

  package controller {
    package controller.transactions {
      class FileWithdrawController {
          - withdrawFileName : String
          + FileWithdrawController()
          + getATM()
          + setATM()
          + setWithdrawFileName()
          + getWithdrawFileName()
          + withdrawMoney()
          - writeWithdrawFile()
      }
    }
  }
  

  package controller {
    package controller.transactions {
      interface WithdrawController {
          {abstract} + setATM()
          {abstract} + getATM()
          {abstract} + withdrawMoney()
      }
    }
  }
  

  CashController o-- ATM : machine
  ChequeController o-- ATM : machine
  FileBillController -up-|> BillController
  FileDepositController -up-|> DepositController
  FileDepositController o-- ATM : machine
  FileDepositController o-- CashFactory : cashFactory
  FileDepositController +-down- DepositType
  FileDepositController +-down- DepositInfo
  DepositInfo o-- DepositType : type
  FileWithdrawController -up-|> WithdrawController
  FileWithdrawController o-- ATM : atm


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
